--- a/components/application/CodeRx/templates/editor_single.html
+++ b/components/application/CodeRx/templates/editor_single.html
@@ -3,7 +3,7 @@
 
 {% block app_content %}
 
-<h3>Problem #1</h3>
+<h3>{{problem.name}}</h3>
 <link rel="stylesheet" href="{{ url_for('static', filename='node_modules/xterm/dist/xterm.css')}}" /> 
 <script src="{{ url_for('static', filename='node_modules/xterm/dist/xterm.js')}}"></script>
 
@@ -42,10 +42,10 @@
         <div class="col-lg-4">
             <div class="row mb-3">
                 <div class="col-lg" style="font-size: 16pt; color: white; padding-left: 20px;">
-                    A set of test variables are passed through the system.in with an expected output.
+                    {{problem.description|safe}}
                 </div>
             </div>
-            <h3 style="padding-left: 20px;"">Program output</h3>
+            <h3 style="padding-left: 20px;">Program output</h3>
             <div id="terminal"></div>
             <div id="displayResults" style="display: none; position: absolute; top: 0; right: 0;">
                 <div class="row">
@@ -60,7 +60,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for case in TestCases %}
+                                {% for case in problem.test_cases %}
                                 <tr>
                                     <th scope = "row">{{loop.index}}</th>
                                     <td id = "results_{{loop.index}}_1">{{case.input}}</td>
